kubernetes/httproute-redirect.in.yaml
!If
  test: !Var letsencrypt_enabled
  then:
    apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      name: redirect-https
    spec:
      parentRefs:
        - name: static
          sectionName: http
      hostnames: !Var static_sites
      rules:
        - filters:
            - type: RequestRedirect
              requestRedirect:
                scheme: https
                statusCode: 301
