kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static
spec:
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    run: foobars
  type: LoadBalancer
